--- a/Frontend/src/styles/main.css
+++ b/Frontend/src/styles/main.css
@@ -83,6 +83,17 @@ button {
   width: 200px;
 }
 
+.sign-up-link {
+  font-weight: bold;
+  font-size: 16px;
+  color: #2c3e50;
+  text-decoration: none;
+}
+
+.sign-up-link:hover {
+  text-decoration: underline;
+}
+
 .hero {
   background-image: url("../images/bank-tree.webp");
   background-position: 0 -50px;
