--- a/Frontend/src/styles/main.css
+++ b/Frontend/src/styles/main.css
@@ -10,6 +10,10 @@ body {
   margin: 0;
 }
 
+a {
+  cursor: pointer;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -18,6 +22,7 @@ body {
 
 .main {
   flex: 1;
+  padding-bottom: 20px;
 }
 
 .bg-dark {
@@ -92,6 +97,8 @@ button {
   font-size: 16px;
   color: #2c3e50;
   text-decoration: none;
+  display: flex;
+  gap: 5px;
 }
 
 .sign-up-link:hover {
@@ -194,6 +201,10 @@ button {
 }
 
 .sign-in-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   box-sizing: border-box;
   background-color: white;
   width: 300px;
@@ -228,6 +239,14 @@ button {
 .input-wrapper input {
   padding: 5px;
   font-size: 1.2rem;
+}
+
+.register-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
 }
 
 .footer {
@@ -338,6 +357,7 @@ button {
 .transactions-wrapper {
   overflow: hidden;
   width: 100%;
+  display: flex;
 }
 
 .transactions-wrapper-open {
@@ -347,11 +367,16 @@ button {
 .transactions-content {
   transition: max-height 0.5s cubic-bezier(0.27, 1, 0.65, 0.73);
   max-height: 0;
+  width: 100%;
 }
 
 .transactions-content-open {
   max-height: 920px;
   padding-top: 10px;
+}
+
+.transactions-list {
+  width: 100%;
 }
 
 .transactions-list p {
@@ -388,7 +413,7 @@ button {
 .arrow {
   cursor: pointer;
   width: 24px;
-  height: 14px;
+  height: 20px;
 }
 
 .arrow-in {
