--- a/Frontend/src/styles/main.css
+++ b/Frontend/src/styles/main.css
@@ -14,6 +14,10 @@ a {
   cursor: pointer;
 }
 
+*:disabled {
+  cursor: not-allowed;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -103,6 +107,11 @@ button {
 
 .sign-up-link:hover {
   text-decoration: underline;
+}
+
+.house {
+  display: flex;
+  gap: 5px;
 }
 
 .hero {
