--- a/Frontend/src/styles/main.css
+++ b/Frontend/src/styles/main.css
@@ -440,24 +440,17 @@ button {
 }
 
 .transaction-wrapper {
+  height: 0;
   overflow: hidden;
   width: 100%;
+  transition: height 0.5s ease-in-out;
 }
 
 .transaction-content {
   display: flex;
   flex-direction: row;
   transition: max-height 0.5s ease-in-out;
-  max-height: 0;
   overflow: hidden;
-}
-
-.transaction-content-open {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  max-height: 76px;
-  padding-top: 10px;
 }
 
 .transaction-labels {
